test/positive/initially01.cfr
// Test for initially constraint

a
 b ?
  c ?
  d ?
  e ?
  [initially c]

