test/negative/unary-until01.cfr
// Test for negative until constraint

a
 b ?
  c ?
  d ?
  [ until d]



